# learning_based_vehicle_calibration

./: CMakeLists.txt  README.md  data_collection.py  data_monitor.py  package.xml  requirements.txt
launch/: calibration_launch.py  calibration_steering_launch.py  neural_network_launch.py  neural_network_steering_launch.py
msg/: LongitudinalProcesses.msg  LongitudinalProgress.msg  SteeringProcesses.msg  SteeringProgress.msg
scripts/: brake_data_visualization.py  braking.csv  braking_bag_9_14.csv  braking_bag_9_15.csv  convert_robobus_data.py  covert_robobus_data.py  data_collection.py  data_monitor.py  data_preprocess.py  data_visualization.py  get_data.bash  load_brake_model.py  load_throttle_model.py  neural_network.py  neural_network_brake.py  neural_network_throttle.py  raw_data_visualization.py  throttle_data_visualization.py  throttling.csv  throttling_bag_9_14.csv  throttling_bag_9_15.csv  trained_throttle.pth
scripts_steering/: brake_data_visualization_steer.py  data_collection_steer.py  data_monitor.py  data_monitor_steer.py  neural_network_brake_steer.py  neural_network_steer.py  neural_network_steer1.py  neural_network_steer2.py  neural_network_steer3.py  neural_network_steer4.py  neural_network_steer5.py  neural_network_throttle_steer.py  rosbag_collection_steer.sh  steering_relationship.py  steering_relationships.csv  throttle_data_visualization_steer.py
